[gd_scene load_steps=6 format=3 uid="uid://cm6pcukme4mw2"]

[ext_resource type="Texture2D" uid="uid://cetcor14u50hs" path="res://assets/sprites/Images/tile_0086.png" id="1_31ivp"]
[ext_resource type="Script" uid="uid://cv0dc1yr2xyw8" path="res://scenes/billboard/billboard.gd" id="1_vcqua"]
[ext_resource type="Shader" uid="uid://chcruxanito2j" path="res://assets/shaders/outline.gdshader" id="2_o6ypo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vcqua"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s473u"]
shader = ExtResource("2_o6ypo")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 0
shader_parameter/inside = true
shader_parameter/add_margins = false

[node name="Billboard" type="Area2D"]
script = ExtResource("1_vcqua")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vcqua")

[node name="Image" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_s473u")
texture = ExtResource("1_31ivp")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
